--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,10 @@ text {
     font-size: 12px;
 }
 
+.tick.t1 text, .tick.t2 text{
+    display: none;
+}
+
 .btn{
     display: inline-block;
     padding: 10px;
