fix bug w missing dots after switchign away from expected inc loss

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,9 @@ select option[value=""] {
 .insig{
     opacity: .25;
 }
+.hidden{
+    opacity: 0;
+}
 
 .y-axis path.domain {
     stroke: none;
