update week 45, June 2022

--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ text {
     font-size: 12px;
 }
 
-.tick.t0 line, .tick.t30 line, .tick.t33 line, .tick.t36 line {
+.tick.t0 line, .tick.t30 line, .tick.t33 line, .tick.t36 line, .tick.t39 line {
   stroke: #000000;
   stroke-width: 2px;
 }
@@ -408,7 +408,7 @@ text {
 .tick.t1 text, .tick.t2 text{
     display: none;
 }
-.tick.t31 text, .tick.t32 text, .tick.t34 text, .tick.t37 text,.tick.t38 text{
+.tick.t31 text, .tick.t32 text, .tick.t34 text, .tick.t37 text,.tick.t38 text,.tick.t40 text {
     display: none;
 }
 
